# infrastructure

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  config.sh  flake.nix  hosts.yml  pyproject.toml  renovate-presets.json  renovate.json  requirements.yml
aws/ses/: .terraform.lock.hcl  users.tf  versions.tf  zones.tf
gitlab/: .terraform.lock.hcl  versions.tf
grafana/: .terraform.lock.hcl  todo  versions.tf
group_vars/: bar_music.yml  docker.yml  k3s.yml  snapclient.yml  snapserver.yml
group_vars/all/: network.yml
group_vars/core/: network.yml  restic.yml  router.yml
group_vars/firewall/: core  docker
host_vars/caster.bar.risson.net/: network.yml
host_vars/edge-1.pvl.as212024.net/: core.yml  firewall.yml  network.yml
host_vars/edge-2.fra.as212024.net/: core.yml  firewall.yml  network.yml  vpn.yml
host_vars/gate-1.bar.as212024.net/: core.yml  dhcp.yml  firewall.yml  network.yml
host_vars/homeassistant.bar.risson.net/: network.yml
host_vars/k3s-1.bar.as212024.net/: network.yml
host_vars/k3s-1.fsn.as212024.net/: network.yml
host_vars/k3s-2.bar.as212024.net/: firewall.yml  network.yml
k8s/argocd/: apps.yml  (+3 more)
playbooks/: kvm.yml  main.yml  network.yml
restic/: .terraform.lock.hcl  repositories.tf  versions.tf
vault/: .terraform.lock.hcl  auth_k8s.tf  k8s-k3s.fsn.as212024.net_infra-akvorado.tf  k8s-k3s.fsn.as212024.net_infra-dmarc-report-viewer.tf  k8s-k3s.fsn.as212024.net_services-jitsi.tf  k8s-k3s.fsn.as212024.net_services-mastodon.tf  k8s-k3s.fsn.as212024.net_services-matrix.tf  mongodb.tf  postgres.tf  versions.tf
(+316 files in other folders)
