[project]
name = "infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "ansible==13.6.0",
    "ansible-lint==26.4.0",
    "black==26.5.0",
    "hvac==2.4.0",
    "jmespath==1.1.0",
    "pre-commit==4.6.0",
    "ruff==0.15.13",
    "xmltodict==1.0.4",
    "yamllint==1.38.0",
]

[tool.uv]
compile-bytecode = true
